chore: ensure iphone appears below second page z-index

--- a/styles/DestinationsPage.module.scss
+++ b/styles/DestinationsPage.module.scss
@@ -1,6 +1,7 @@
 .destinationPage {
   height: min-content;
   padding-inline: 2em;
+  z-index: 1;
 
   &::before {
     content: "";
